--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic=["version"]
 
 [project]
 name = "models"
-authors = [{name = "Andrew Blair", email = "andrew.blair@ucsf.edu"}]
+authors = [{name = "Henry Scott", email = "henry.scott@ucsf.edu"}]
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
